update: session 4 part1

--- a/Sesión 04 - Introducción a LangChain/01_a_models.ipynb
+++ b/Sesión 04 - Introducción a LangChain/01_a_models.ipynb
@@ -57,17 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = OpenAI(temperature=.8)\n",
+    "llm = OpenAI(temperature=.8, model_name=\"text-davinci-003\") #\"gpt-3.5-turbo\" es un modelo de chat\n",
     "txt = \"Bievenidos participantes de la hackatón. Esta es la sesión 4. ¿Cómo están?\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
      "text": [
       "\n",
       "\n",
-      "¡Hola! Estamos listos para comenzar. Estamos emocionados por ver qué podemos crear durante la hackatón. ¡Vamos allá!\n"
+      "Estamos muy emocionados de participar en la hackatón. Estamos listos para aprender y compartir conocimiento. ¡Gracias por ofrecer esta oportunidad!\n"
      ]
     }
    ],
@@ -97,31 +97,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Que tal si ahora solicitamos más de una respuesta\n",
     "llm = OpenAI(temperature=.8, n=4)\n",
     "llm_answers = llm.generate([\"Nómbrame un país sudamericano\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Brasil|Brasil|Brasil|Bolivia\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Respuesta depurada\n",
-    "print('|'.join([re.sub(r'[\\s'+string.punctuation+']', '', x.text) for x in llm_answers.generations[0]]))"
    ]
   },
   {
@@ -133,7 +115,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'token_usage': {'completion_tokens': 23, 'total_tokens': 36, 'prompt_tokens': 13}, 'model_name': 'text-davinci-003'}\n"
+      "Brasil|Ecuador|Argentina|Perú\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Respuesta depurada\n",
+    "print('|'.join([re.sub(r'[\\s'+string.punctuation+']', '', x.text) for x in llm_answers.generations[0]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'token_usage': {'prompt_tokens': 13, 'total_tokens': 34, 'completion_tokens': 21}, 'model_name': 'text-davinci-003'}\n"
      ]
     }
    ],
@@ -159,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
