--- a/Sesión 04 - Introducción a LangChain/01_b_prompt_templates.ipynb
+++ b/Sesión 04 - Introducción a LangChain/01_b_prompt_templates.ipynb
@@ -37,7 +37,7 @@
     }
    ],
    "source": [
-    "#Carga de api keys\n",
+    "#Carga de keys\n",
     "load_dotenv()"
    ]
   },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
      "text": [
       "\n",
       "\n",
-      "¡Hola! ¡Espero que disfrutes de tu helado de frutilla! Aquí en nuestra heladería, ofrecemos una variedad de sabores de helados hechos a mano con ingredientes frescos. Puede elegir entre nuestros sabores clásicos como vainilla, fresa, chocolate, etc., o optar por algo más exótico como helado de mango o de durazno. También ofrecemos helados sin azúcar y helados veganos. ¡No dudes en visitarnos para probar nuestros helados! ¡Te esperamos!\n"
+      "¡Hola! ¡Es fantástico que quieras comprar un helado de frutilla! ¿Qué tipo de helado quieres? ¿Una mini paleta, un cono, una tarrina o una bola?\n"
      ]
     }
    ],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
      "text": [
       "\n",
       "\n",
-      "Hola, ¡sería un placer servirte un helado de frutilla con baño de chocolate! Por favor, elije la cantidad de helado que deseas. ¡Nos encantaría complacerte!\n"
+      "Hola, ¡encantado de servirte! Tenemos un delicioso helado de frutilla con baño de chocolate. Puedes ordenarlo ahora y te lo entregaremos en tu ubicación. ¡Disfruta tu postre!\n"
      ]
     }
    ],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
      "text": [
       "\n",
       "\n",
-      "¡Qué rico! A continuación te haremos una propuesta para satisfacer tu deseo, te ofrecemos un rico helado de frutilla con un baño de chocolate artesanal, elaborado en la preparación que mejor te guste y que incluye una gran cantidad de frutillas frescas para mejorar el sabor. Además, para acompañar tu helado, te ofrecemos una variedad de toppings como: nueces, arándanos, flores de Jamaica, coco rallado, etc. ¡Esperamos que disfrutes de tu helado!\n"
+      "Hola, te podemos ofrecer un delicioso helado de frutilla con baño de chocolate. ¡Esperamos que lo disfrutes!\n"
      ]
     }
    ],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
      "text": [
       "\n",
       "\n",
-      "Hola, gracias por tu compra. Tenemos una variedad de sabores de helado de frutilla para satisfacer todos tus deseos. Nuestros sabores incluyen frutilla, fresa, frambuesa, naranja y muchos más. ¡Puedes ver nuestra lista completa de sabores aquí!\n"
+      "¡Hola! ¡Qué buena idea! Encontrarás un helado de frutilla en la mayoría de los supermercados y heladerías. Si prefieres, también puedes hacer uno en casa. ¡Espero que disfrutes tu helado de frutilla!\n"
      ]
     }
    ],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -337,14 +337,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " en cubos\n"
+      " congelado\n"
      ]
     }
    ],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
      "text": [
       "\n",
       "\n",
-      "Al mezclar un líquido no miscible como el aceite con agua, obtendremos una mezcla de dos capas, una capa superior formada por el agua y una capa inferior formada por el aceite. La mezcla no se disolverá, sino que permanecerá separada.\n"
+      "La mezcla de agua con aceite no es posible debido a que el agua y el aceite no se mezclan entre sí. El agua es una sustancia polar y el aceite es una sustancia no polar, por lo que no se unen y se separan formando dos capas distintas.\n"
      ]
     }
    ],
@@ -437,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
