--- a/Sesión 04 - Introducción a LangChain/03_chains.ipynb
+++ b/Sesión 04 - Introducción a LangChain/03_chains.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,14 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Una buena actividad para realizar en primavera es hacer un picnic al aire libre. Puedes buscar un parque o jardín bonito y llevar una manta, comida y bebidas. Disfrutarás del buen clima, de la naturaleza y de una comida al aire libre. También puedes llevar juegos de mesa o actividades al aire libre como una pelota o una frisbee para divertirte aún más.\n"
+      "Una buena actividad para realizar en primavera es hacer un picnic al aire libre. Puedes elegir un parque o un jardín bonito, llevar una manta, comida y bebidas, y disfrutar de un día soleado rodeado de naturaleza. Además, puedes aprovechar para jugar diferentes juegos al aire libre, como lanzar una frisbee o practicar deportes en equipo.\n"
      ]
     }
    ],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,16 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Los primeros 5 números de la serie de Fibonacci son 0, 1, 1, 2, 3. ¿Hay algo más en lo que pueda ayudarte?'"
+       "'¡Claro! Los primeros 5 números de la serie de Fibonacci son: 0, 1, 1, 2, 3. La serie de Fibonacci es una secuencia matemática en la que cada número es la suma de los dos anteriores.'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,16 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'El séptimo número de la serie de Fibonacci es 8. ¿Hay algo más en lo que pueda ayudarte?'"
+       "'El séptimo número en la serie de Fibonacci es 8.'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
